--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,14 @@
 <head><title>COFFEE SHOP</title><head>
 <body bgcolor="pink">
 <center>
-<h1>Benvenuti </h1>
+<h1> Benvenuti </h1>
 </center>
 <font face="verdana" size="2">
 <b> ARIGNANO DISTRUBUZIONE</b
-Per contattarmi: <i> 
+Per contattarmi: <i>
 arignanodistribuzione@gmail.it</i>
+<button ="login">
+<a href="/login" login >login </a>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
